# Music-Playlist

./: .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  Tasks.txt
include/jade/: App.h  Audio.h  Cache.h  Config.h  Core.h  Event.h  EventSystem.h  InputSystem.h  MusicDatabase.h  MusicLibrary.h  Platform.h
include/jade/audio/: Audio.h  Player.h
include/jade/backend/: Backend.h  BackendConsole.h
include/musicplaylist/: App.h  Backend.h  BackendConsole.h  BidirectionalPriorityQueue.h  Cache.h  Config.h  Generator.h  Musicdb.h  Player.h  Playlist.h
src/: App.cpp  Audio.cpp  BackendConsole.cpp  Config.cpp  EventSystem.cpp  Generator.cpp  InputSystem.cpp  MusicDatabase.cpp  MusicLibrary.cpp  Musicdb.cpp  Platform.cpp  Player.cpp  Playlist.cpp
